Add GET methods with conditions for other endpoints (swagger updated)
