# routes/v1/zoo.js
@@ -26,13 +26,60 @@ router.get("/:id", (req, res, next) => {
         }).catch(next);
 });
 
-// Get all zoos
+// // Get all zoos
+// router.get("/", (req, res, next) => {
+//     Zoo.find({}).then((zoos) => {
+//         return res.status(200).json(
+//             zoos
+//         );
+//     }).catch(next);
+// });
+
+// Get zoos with conditions
 router.get("/", (req, res, next) => {
-    Zoo.find({}).then((zoos) => {
-        return res.status(200).json(
-            zoos
-        );
-    }).catch(next);
+    let condition = [];
+
+    // Find name with regex
+    let _name = req.query.name;
+    if (_name) {
+        condition.push({ name: { $regex: new RegExp(_name), $options: "i" } });
+    }
+
+    // Find country with regex
+    let _country = req.query.country;
+    if (_country) {
+        condition.push({ country: { $regex: new RegExp(_country), $options: "i" } });
+    }
+
+    // Find exact license
+    let _license = req.query.license;
+    if (_license) {
+        condition.push({
+            license: _license
+        });
+    }
+
+    // Find year greater than or equal given year
+    let _year = req.query.year;
+    if (_year) {
+        condition.push({
+            year: { $gte: _year }
+        });
+    }
+
+    if (condition.length > 0) {
+        Zoo.find().and(condition).then((zoos) => {
+            return res.status(200).json(
+                zoos
+            );
+        }).catch(next);
+    } else {
+        Zoo.find({}).then((zoos) => {
+            return res.status(200).json(
+                zoos
+            );
+        }).catch(next);
+    }
 });
 
 // Get all animals of zoo
